--- a/arche-react/en/privacy-policy.html
+++ b/arche-react/en/privacy-policy.html
@@ -1,5 +1,5 @@
 
-<section class="static-pages pt-[50px]">
+<section class="pt-[50px]">
 
 
     <div class="container-w980 mx-auto">
@@ -165,168 +165,87 @@
     </div>
 
 
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="how-to-access-rectify-and-delete-the-personal-data">
-                                {{ element_11.title }}&nbsp;<a class="anchor-link" href="{{ element_11.title_url }}" aria-label="{{ element_11.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="how-to-access-rectify-and-delete-the-personal-data">
+                    {{ element_11.title }}&nbsp;<a class="anchor-link" href="{{ element_11.title_url }}" aria-label="{{ element_11.title_url_text }}">#</a>
+                </h1>
             </div>
         </div>
     </div>
 
-
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_11.content }}
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_11.content }}
         </div>
     </div>
 
 
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="changes-to-this-privacy-policy">
-                                {{ element_12.title }}&nbsp;<a class="anchor-link" href="{{ element_12.title_url }}" aria-label="{{ element_12.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="changes-to-this-privacy-policy">
+                    {{ element_12.title }}&nbsp;<a class="anchor-link" href="{{ element_12.title_url }}" aria-label="{{ element_12.title_url_text }}">#</a>
+                </h1>
             </div>
         </div>
     </div>
 
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_12.content }}
+        </div>
+    </div>
 
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_12.content }}
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="data-protection-code-of-conduct">
+                    {{ element_13.title }}&nbsp;<a class="anchor-link" href="{{ element_13.title_url }}" aria-label="{{ element_13.title_url_text }}">#</a>
+                </h1>
             </div>
         </div>
     </div>
 
-
-
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="data-protection-code-of-conduct">
-                                {{ element_13.title }}&nbsp;<a class="anchor-link" href="{{ element_13.title_url }}" aria-label="{{ element_13.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_13.content }}
         </div>
     </div>
 
 
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_13.content }}
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="data-controller-and-contact-person">
+                    {{ element_14.title }}&nbsp;<a class="anchor-link" href="{{ element_14.title_url }}" aria-label="{{ element_14.title_url_text }}">#</a>
+                </h1>
             </div>
         </div>
     </div>
 
-
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="data-controller-and-contact-person">
-                                {{ element_14.title }}&nbsp;<a class="anchor-link" href="{{ element_14.title_url }}" aria-label="{{ element_14.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_14.content }}
         </div>
     </div>
 
 
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_14.content }}
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="jurisdiction">
+                    {{ element_15.title }}&nbsp;<a class="anchor-link" href="{{ element_15.title_url }}" aria-label="{{ element_15.title_url_text }}">#</a>
+
+                </h1>
             </div>
         </div>
     </div>
 
-
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="jurisdiction">
-                                {{ element_15.title }}&nbsp;<a class="anchor-link" href="{{ element_15.title_url }}" aria-label="{{ element_15.title_url_text }}">#</a>
-
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_15.content }}
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_15.content }}
         </div>
     </div>
 
@@ -339,9 +258,9 @@
             <h1 class="section-header-title-small">
                 {{ cards.cards_header_title_small }}
             </h1>
-            <h2 class="section-header-title" id="how-does-the-data-deposition-work">
+            <h1 class="section-header-title" id="how-does-the-data-deposition-work">
                 {{ cards.cards_header_title }}
-            </h2>
+            </h1>
         </div>            
     </div>
 
