--- a/arche-react/en/terms-of-use.html
+++ b/arche-react/en/terms-of-use.html
@@ -1,278 +1,143 @@
-
-<section>
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_1.content }}      
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="definitions">
-                                {{ element_2.title }}&nbsp;<a class="anchor-link" href="{{ element_2.title_url }}" aria-label="{{ element_2.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<section class="pt-[50px]">
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_1.content }}
         </div>
     </div>
 
 
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_2.content }}
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h2 class="section-header-title" id="definitions">
+                    {{ element_2.title }}&nbsp;<a class="anchor-link" href="{{ element_2.title_url }}" aria-label="{{ element_2.title_url_text }}">#</a>
+                </h2>
             </div>
         </div>
     </div>
 
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_2.content }}
+        </div>
+    </div>
 
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="deposition-of-resources">
-                                {{ element_3.title }}&nbsp;<a class="anchor-link" href="{{ element_3.title_url }}" aria-label="{{ element_3.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="deposition-of-resources">
+                    {{ element_3.title }}&nbsp;<a class="anchor-link" href="{{ element_3.title_url }}" aria-label="{{ element_3.title_url_text }}">#</a>
+                </h1>
             </div>
         </div>
     </div>
 
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_3.content }}
+        </div>
+    </div>
 
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_3.content }}
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="access-to-and-use-of-the-resources">
+                    {{ element_4.title }}&nbsp;<a class="anchor-link" href="{{ element_4.title_url }}" aria-label="{{ element_4.title_url_text }}">#</a>
+                </h1>
             </div>
         </div>
     </div>
 
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_4.content }}
+        </div>
+    </div>
 
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="access-to-and-use-of-the-resources">
-                                {{ element_4.title }}&nbsp;<a class="anchor-link" href="{{ element_4.title_url }}" aria-label="{{ element_4.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="intellectual-property-rights-copyright">
+                    {{ element_5.title }}&nbsp;<a class="anchor-link" href="{{ element_5.title_url }}" aria-label="{{ element_5.title_url_text }}">#</a>
+                </h1>
             </div>
         </div>
     </div>
 
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_5.content }}
+        </div>
+    </div>
 
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_4.content }}
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="citation">
+                    {{ element_6.title }}&nbsp;<a class="anchor-link" href="{{ element_6.title_url }}" aria-label="{{ element_6.title_url_text }}">#</a>
+                </h1>
             </div>
         </div>
     </div>
 
-
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="intellectual-property-rights-copyright">
-                                {{ element_5.title }}&nbsp;<a class="anchor-link" href="{{ element_5.title_url }}" aria-label="{{ element_5.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_6.content }}
         </div>
     </div>
 
 
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_5.content }}
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="limitation-of-liability">
+                    {{ element_7.title }}&nbsp;<a class="anchor-link" href="{{ element_7.title_url }}" aria-label="{{ element_7.title_url_text }}">#</a>
+                </h1>
             </div>
         </div>
     </div>
 
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="citation">
-                                {{ element_6.title }}&nbsp;<a class="anchor-link" href="{{ element_6.title_url }}" aria-label="{{ element_6.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_7.content }}
         </div>
     </div>
 
 
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_6.content }}
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="data-protection-and-privacy-policy">
+                    {{ element_8.title }}&nbsp;<a class="anchor-link" href="{{ element_8.title_url }}" aria-label="{{ element_8.title_url_text }}">#</a>
+                </h1>
             </div>
         </div>
     </div>
 
-
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="limitation-of-liability">
-                                {{ element_7.title }}&nbsp;<a class="anchor-link" href="{{ element_7.title_url }}" aria-label="{{ element_7.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_8.content }}
         </div>
     </div>
 
 
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_7.content }}
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="jurdisction">
+                    {{ element_9.title }}&nbsp;<a class="anchor-link" href="{{ element_9.title_url }}" aria-label="{{ element_9.title_url_text }}">#</a>
+                </h1>
             </div>
         </div>
     </div>
 
-
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <p class="section-header-title" id="data-protection-and-privacy-policy">
-                                {{ element_8.title }}&nbsp;<a class="anchor-link" href="{{ element_8.title_url }}" aria-label="{{ element_8.title_url_text }}">#</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_9.content }}
         </div>
     </div>
 
 
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_8.content }}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="jurdisction">
-                                {{ element_9.title }}&nbsp;<a class="anchor-link" href="{{ element_9.title_url }}" aria-label="{{ element_9.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_9.content }}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 </section>
 
 <!-- CARDS HEADER -->
@@ -287,9 +152,7 @@
             </h2>
         </div>            
     </div>
-
 </section>
-
 
 
 <!-- CARDS -->
