--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -49,7 +49,7 @@
                                 class="bg-white flex items-center justify-between cursor-pointer p-4 select-none
                                 transition-colors open:bg-blue-50  
                                 [&::-webkit-details-marker]:hidden open:text-white">
-                                <span class="static-acc-title !text-inherit">{{ element_2.accordion_1_title }}</span>
+                                <span class="static-acc-title">{{ element_2.accordion_1_title }}</span>
                                 <!-- chevron -->
                                 <svg width="16px" height="16px" class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                 <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
