--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -13,7 +13,7 @@
             <div class='flex w-full'>
                 <div class='flex gap-6 w-full'>
                     <div class='w-full w-1/2'>
-                        { element_1.content_left }}
+                        {{ element_1.content_left }}
                     </div>
                     <div class='w-full w-1/2'>
                         {{ element_1.content_right }}
