--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -39,83 +39,128 @@
 
 
 
-    <div class="container-w980 mx-auto">
-        <div class="w-full">
-            <div class="container">
-                <div class="grid grid-cols-1 sm:grid-cols-3 gap-6 items-stretch">
-
-                    <div class="w-full max-w-sm">   <!-- centers because of justify-items-center + max width -->
-                        <div class="rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-                            <div class="mb-6 flex items-center justify-center">
-                                <img class="card-img-top home-resources-images w-full h-auto"
-                                     src="{{ element_2.card_1_image }}" alt="{{ element_2.card_1_title }}"
-                                     width="165" height="138">
-                            </div>
-                            <div class="card-body home-resources-body p-4">
-                                <h5 class="card-title mb-3 text-center">
-                                    <a class="home-resources-title" href="{{ element_2.card_1_url }}">
-                                        {{ element_2.card_1_title }}
-                                    </a>
-                                </h5>
-                                <p class="card-text home-resources-text">
-                                    {{ element_2.card_1_text }}
-                                </p>
-                                <p class="mt-auto">
-                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_2.card_1_url }}">Show</a>
-                                </p>
-                            </div>
-                        </div>
+    <div class="mx-auto w-full max-w-[980px] px-4">
+        <div class="grid grid-cols-1 gap-6 sm:grid-cols-3 items-stretch">
+            <!-- Card 1 -->
+            <div class="w-full max-w-sm mx-auto">
+                <div class="h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5 flex flex-col">
+                    <div class="mb-6 flex items-center justify-center">
+                        <img
+                            class="h-auto w-full max-w-[220px] object-contain"
+                            src="{{ element_2.card_1_image }}"
+                            alt="{{ element_2.card_1_title }}"
+                            width="165"
+                            height="138"
+                            loading="lazy"
+                            >
                     </div>
 
+                    <h5 class="mb-3 text-center text-lg font-semibold leading-snug">
+                        <a
+                            class="text-slate-900 hover:text-slate-700 focus:outline-none focus-visible:ring-2 focus-visible:ring-slate-400 rounded"
+                            href="{{ element_2.card_1_url }}"
+                            >
+                            {{ element_2.card_1_title }}
+                        </a>
+                    </h5>
 
-                    <div class="w-full max-w-sm">   <!-- centers because of justify-items-center + max width -->
-                        <div class="rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-                            <div class="mb-6 flex items-center justify-center">
-                                <img class="card-img-top home-resources-images w-full h-auto"
-                                     src="{{ element_2.card_1_image }}" alt="{{ element_2.card_1_title }}"
-                                     width="165" height="138">
-                            </div>
-                            <div class="card-body home-resources-body p-4">
-                                <h5 class="card-title mb-3 text-center">
-                                    <a class="home-resources-title" href="{{ element_2.card_1_url }}">
-                                        {{ element_2.card_1_title }}
-                                    </a>
-                                </h5>
-                                <p class="card-text home-resources-text">
-                                    {{ element_2.card_1_text }}
-                                </p>
-                                <p class="mt-auto">
-                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_2.card_1_url }}">Show</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+                    <p class="text-sm leading-6 text-slate-600 flex-1">
+                        {{ element_2.card_1_text }}
+                    </p>
 
-
-                    <div class="w-full max-w-sm">   <!-- centers because of justify-items-center + max width -->
-                        <div class="rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-                            <div class="mb-6 flex items-center justify-center">
-                                <img class="card-img-top home-resources-images w-full h-auto"
-                                     src="{{ element_2.card_1_image }}" alt="{{ element_2.card_1_title }}"
-                                     width="165" height="138">
-                            </div>
-                            <div class="card-body home-resources-body p-4">
-                                <h5 class="card-title mb-3 text-center">
-                                    <a class="home-resources-title" href="{{ element_2.card_1_url }}">
-                                        {{ element_2.card_1_title }}
-                                    </a>
-                                </h5>
-                                <p class="card-text home-resources-text">
-                                    {{ element_2.card_1_text }}
-                                </p>
-                                <p class="mt-auto">
-                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_2.card_1_url }}">Show</a>
-                                </p>
-                            </div>
-                        </div>
+                    <div class="pt-6">
+                        <a
+                            class="inline-flex items-center justify-center rounded-lg px-4 py-2 text-sm font-semibold
+                            bg-[#005480] text-white hover:bg-[#0B654E]
+                            focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-[#005480]"
+                            href="{{ element_2.card_1_url }}"
+                            >
+                            Show
+                        </a>
                     </div>
                 </div>
             </div>
+
+            <!-- Card 2 -->
+            <div class="w-full max-w-sm mx-auto">
+                <div class="h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5 flex flex-col">
+                    <div class="mb-6 flex items-center justify-center">
+                        <img
+                            class="h-auto w-full max-w-[220px] object-contain"
+                            src="{{ element_2.card_2_image }}"
+                            alt="{{ element_2.card_2_title }}"
+                            width="165"
+                            height="138"
+                            loading="lazy"
+                            >
+                    </div>
+
+                    <h5 class="mb-3 text-center text-lg font-semibold leading-snug">
+                        <a
+                            class="text-slate-900 hover:text-slate-700 focus:outline-none focus-visible:ring-2 focus-visible:ring-slate-400 rounded"
+                            href="{{ element_2.card_2_url }}"
+                            >
+                            {{ element_2.card_2_title }}
+                        </a>
+                    </h5>
+
+                    <p class="text-sm leading-6 text-slate-600 flex-1">
+                        {{ element_2.card_2_text }}
+                    </p>
+
+                    <div class="pt-6">
+                        <a
+                            class="inline-flex items-center justify-center rounded-lg px-4 py-2 text-sm font-semibold
+                            bg-[#005480] text-white hover:bg-[#0B654E]
+                            focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-[#005480]"
+                            href="{{ element_2.card_2_url }}"
+                            >
+                            Show
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="w-full max-w-sm mx-auto">
+                <div class="h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5 flex flex-col">
+                    <div class="mb-6 flex items-center justify-center">
+                        <img
+                            class="h-auto w-full max-w-[220px] object-contain"
+                            src="{{ element_2.card_3_image }}"
+                            alt="{{ element_2.card_3_title }}"
+                            width="165"
+                            height="138"
+                            loading="lazy"
+                            >
+                    </div>
+
+                    <h5 class="mb-3 text-center text-lg font-semibold leading-snug">
+                        <a
+                            class="text-slate-900 hover:text-slate-700 focus:outline-none focus-visible:ring-2 focus-visible:ring-slate-400 rounded"
+                            href="{{ element_2.card_3_url }}"
+                            >
+                            {{ element_2.card_3_title }}
+                        </a>
+                    </h5>
+
+                    <p class="text-sm leading-6 text-slate-600 flex-1">
+                        {{ element_2.card_3_text }}
+                    </p>
+
+                    <div class="pt-6">
+                        <a
+                            class="inline-flex items-center justify-center rounded-lg px-4 py-2 text-sm font-semibold
+                            bg-[#005480] text-white hover:bg-[#0B654E]
+                            focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-[#005480]"
+                            href="{{ element_2.card_3_url }}"
+                            >
+                            Show
+                        </a>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 
