--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -172,38 +172,34 @@
                 <h1 class="section-header-title-small">
                     {{ element_3.title_small }}
                 </h1>
-                <h2
-                    class="section-header-title"
-                    id="deposit-discover-and-reuse-data"
-                    >
+                <h2 class="section-header-title" id="deposit-discover-and-reuse-data" >
                     {{ element_3.title }}
                 </h2>
             </div>
         </div>
     </div>
 
-    <div class="w-full flex justify-center arche-home-collections-slider ">
-        <div class="grid grid-cols-6 gap-4">            
-            <div class="col-span-4 col-start-2 container-w980">
-                <div class="w-full">
-
-                    <div class="container collections-container">
-
-                        <div
-                            data-component="carousel"
-                            data-endpoint="/api/topcollections/12/en"
-                            >
-                        </div>
 
 
-                    </div>
+
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+
+            <div class="container collections-container">
+
+                <div
+                    data-component="carousel"
+                    data-endpoint="/api/topcollections/12/en"
+                    >
                 </div>
 
+
             </div>
-
         </div>
-    </div>
 
+    </div>
+    
+    Mission
     <div class="w-full flex justify-center mission-container-home">
 
         <div class="grid grid-cols-6 gap-4">     
