--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -39,7 +39,7 @@
 
 
 
-    <div class="mx-auto w-full max-w-[980px] px-4">
+    <div class="container-w980 mx-auto">
         <div class="grid grid-cols-1 gap-6 sm:grid-cols-3 items-stretch">
             <!-- Card 1 -->
             <div class="w-full max-w-sm mx-auto">
@@ -68,16 +68,7 @@
                         {{ element_2.card_1_text }}
                     </p>
 
-                    <div class="pt-6">
-                        <a
-                            class="inline-flex items-center justify-center rounded-lg px-4 py-2 text-sm font-semibold
-                            bg-[#005480] text-white hover:bg-[#0B654E]
-                            focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-[#005480]"
-                            href="{{ element_2.card_1_url }}"
-                            >
-                            Show
-                        </a>
-                    </div>
+                    <p class="mt-auto"> <a class="btn basic-arche-btn home-resources-btn" href="{{ element_2.card_1_url }}">Show</a> </p>Ï
                 </div>
             </div>
 
@@ -108,16 +99,7 @@
                         {{ element_2.card_2_text }}
                     </p>
 
-                    <div class="pt-6">
-                        <a
-                            class="inline-flex items-center justify-center rounded-lg px-4 py-2 text-sm font-semibold
-                            bg-[#005480] text-white hover:bg-[#0B654E]
-                            focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-[#005480]"
-                            href="{{ element_2.card_2_url }}"
-                            >
-                            Show
-                        </a>
-                    </div>
+                    <p class="mt-auto"> <a class="btn basic-arche-btn home-resources-btn" href="{{ element_2.card_2_url }}">Show</a> </p>
                 </div>
             </div>
 
@@ -148,16 +130,7 @@
                         {{ element_2.card_3_text }}
                     </p>
 
-                    <div class="pt-6">
-                        <a
-                            class="inline-flex items-center justify-center rounded-lg px-4 py-2 text-sm font-semibold
-                            bg-[#005480] text-white hover:bg-[#0B654E]
-                            focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-[#005480]"
-                            href="{{ element_2.card_3_url }}"
-                            >
-                            Show
-                        </a>
-                    </div>
+                    <p class="mt-auto"> <a class="btn basic-arche-btn home-resources-btn" href="{{ element_2.card_3_url }}">Show</a> </p>
                 </div>
             </div>
 
