--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -1,7 +1,7 @@
 <section>
 
     <div class="container-w980 mx-auto">
-        <div class="mx-auto w-full max-w-6xl px-6">
+        <div class="w-full">
             <div class="static-heading-div text-center">
                 <h1 class="section-header-title-small">
                     {{ element_1.title_small }}
@@ -68,7 +68,7 @@
                         {{ element_2.card_1_text }}
                     </p>
 
-                    <p class="mt-auto"> <a class="btn basic-arche-btn home-resources-btn" href="{{ element_2.card_1_url }}">Show</a> </p>Ï
+                    <p class="mt-auto"> <a class="btn basic-arche-btn home-resources-btn" href="{{ element_2.card_1_url }}">Show</a> </p>
                 </div>
             </div>
 
@@ -155,24 +155,17 @@
 
 
 
-    <div class="container-w980 mx-auto">
-        <div class="mx-auto w-full max-w-6xl px-6">
-
+    <div class="container-w980 mx-auto arche-home-collections-slider">
             <div class="container collections-container">
-
                 <div
                     data-component="carousel"
                     data-endpoint="/api/topcollections/12/en"
                     >
                 </div>
-
-
             </div>
-        </div>
-
     </div>
     
-    Mission
+    
     <div class="w-full flex justify-center mission-container-home">
 
         <div class="grid grid-cols-6 gap-4">     
