--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -156,16 +156,12 @@
 
 
     <div class="container-w980 mx-auto arche-home-collections-slider">
-            <div class="container collections-container">
-                <div
-                    data-component="carousel"
-                    data-endpoint="/api/topcollections/12/en"
-                    >
-                </div>
-            </div>
+        <div class="container collections-container">
+            <div id="collections-container"></div>
+        </div>
     </div>
-    
-    
+
+
     <div class="w-full flex justify-center mission-container-home">
 
         <div class="grid grid-cols-6 gap-4">     
