--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -161,7 +161,7 @@
         </div>
     </div>
 
-
+    <!-- Not ready -->
     <div class="w-full flex justify-center mission-container-home">
 
         <div class="grid grid-cols-6 gap-4">     
