--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -55,14 +55,14 @@
                             >
                     </div>
 
-                    <h5 class="mb-3 text-center text-lg font-semibold leading-snug">
+                    <p class="mb-3 text-center text-lg font-semibold leading-snug">
                         <a
                             class="text-slate-900 hover:text-slate-700 focus:outline-none focus-visible:ring-2 focus-visible:ring-slate-400 rounded"
                             href="{{ element_2.card_1_url }}"
                             >
                             {{ element_2.card_1_title }}
                         </a>
-                    </h5>
+                    </p>
 
                     <p class="text-sm leading-6 text-slate-600 flex-1">
                         {{ element_2.card_1_text }}
@@ -86,14 +86,14 @@
                             >
                     </div>
 
-                    <h5 class="mb-3 text-center text-lg font-semibold leading-snug">
+                    <p class="mb-3 text-center text-lg font-semibold leading-snug">
                         <a
                             class="text-slate-900 hover:text-slate-700 focus:outline-none focus-visible:ring-2 focus-visible:ring-slate-400 rounded"
                             href="{{ element_2.card_2_url }}"
                             >
                             {{ element_2.card_2_title }}
                         </a>
-                    </h5>
+                    </p>
 
                     <p class="text-sm leading-6 text-slate-600 flex-1">
                         {{ element_2.card_2_text }}
@@ -117,14 +117,14 @@
                             >
                     </div>
 
-                    <h5 class="mb-3 text-center text-lg font-semibold leading-snug">
+                    <p class="mb-3 text-center text-lg font-semibold leading-snug">
                         <a
                             class="text-slate-900 hover:text-slate-700 focus:outline-none focus-visible:ring-2 focus-visible:ring-slate-400 rounded"
                             href="{{ element_2.card_3_url }}"
                             >
                             {{ element_2.card_3_title }}
                         </a>
-                    </h5>
+                    </p>
 
                     <p class="text-sm leading-6 text-slate-600 flex-1">
                         {{ element_2.card_3_text }}
@@ -162,6 +162,78 @@
     </div>
 
     <!-- Not ready -->
+    <div class="container-w980 mx-auto">
+        <div class="container mission-container">
+
+
+            <div class='flex w-full'>
+                <div class='flex gap-6 w-full'>
+                    <div class='w-full w-1/2'>
+
+                        <div class="xl:text-left">
+
+                            <p class="section-header-title-small flex">
+                                {{ element_4.title_small }}
+                            </p>
+                            <h2 class="section-header-title flex" id="mission">
+                                {{ element_4.title }}
+                            </h2>
+
+                            <p>
+                                {{ element_4.content_right }}
+                            </p>
+                        </div>
+                    </div>
+                    <div class='w-full w-1/2'>
+                        {{ element_4.content_right }}
+                    </div>
+                </div>
+            </div>
+
+            <div class='flex w-full'>
+                <div class='flex gap-6 w-full'>
+                    <div class='w-full w-1/2'>
+                        <a
+                            class="btn btn-arche-blue"
+                            href="{{ element_4.more_url }}"
+                            >
+                            More
+                        </a>
+                    </div>
+                    <div class='w-full w-1/2'>
+                        <div>
+                            <img
+                                class="max-w-full h-auto"
+                                src="/browser/images/logos/mission-acdh-logo.png"
+                                alt="..."
+                                width="56"
+                                height="62"
+                                />
+                        </div>
+                        <div>
+                            <img
+                                class="max-w-full h-auto"
+                                src="/browser/images/logos/mission-oaw-logo.png"
+                                alt="..."
+                                width="120"
+                                height="59"
+                                />
+                        </div>
+                        <div>
+                            <img
+                                class="max-w-full h-auto"
+                                src="/browser/images/logos/mission-arche-logo.png"
+                                alt="..."
+                                width="120"
+                                height="39"
+                                />
+                        </div>
+                    </div>
+                </div>
+            </div>    
+
+        </div>
+    </div>
     <div class="w-full flex justify-center mission-container-home">
 
         <div class="grid grid-cols-6 gap-4">     
