--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -180,7 +180,7 @@
                             </h2>
 
                             <p>
-                                {{ element_4.content_right }}
+                                {{ element_4.content_left }}
                             </p>
                         </div>
                     </div>
@@ -201,32 +201,34 @@
                         </a>
                     </div>
                     <div class='w-full w-1/2'>
-                        <div>
-                            <img
-                                class="max-w-full h-auto"
-                                src="/browser/images/logos/mission-acdh-logo.png"
-                                alt="..."
-                                width="56"
-                                height="62"
-                                />
-                        </div>
-                        <div>
-                            <img
-                                class="max-w-full h-auto"
-                                src="/browser/images/logos/mission-oaw-logo.png"
-                                alt="..."
-                                width="120"
-                                height="59"
-                                />
-                        </div>
-                        <div>
-                            <img
-                                class="max-w-full h-auto"
-                                src="/browser/images/logos/mission-arche-logo.png"
-                                alt="..."
-                                width="120"
-                                height="39"
-                                />
+                        <div class="grid grid-cols-3 text-center items-center">
+                            <div>
+                                <img
+                                    class="max-w-full h-auto"
+                                    src="/browser/images/logos/mission-acdh-logo.png"
+                                    alt="..."
+                                    width="56"
+                                    height="62"
+                                    />
+                            </div>
+                            <div>
+                                <img
+                                    class="max-w-full h-auto"
+                                    src="/browser/images/logos/mission-oaw-logo.png"
+                                    alt="..."
+                                    width="120"
+                                    height="59"
+                                    />
+                            </div>
+                            <div>
+                                <img
+                                    class="max-w-full h-auto"
+                                    src="/browser/images/logos/mission-arche-logo.png"
+                                    alt="..."
+                                    width="120"
+                                    height="39"
+                                    />
+                            </div>
                         </div>
                     </div>
                 </div>
